Add hiking slides.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,6 +97,7 @@ This work formally establishes that any time-agnostic property that can be achie
   arxiv={2311.02067},
   html={https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ICALP.2024.48},
   url={https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ICALP.2024.48},
+  slides={hiking_slides.pdf},
   abbr={ICALP 24},
   abstract={A decade ago, Gerhard Woeginger posed an open problem that became well-known as ``Woeginger's Hiking Problem'': Consider a group of $n$ people that want to go hiking; everyone expresses preferences over the size of their hiking group in the form of an interval between $1$ and $n$. Is it possible to efficiently assign the $n$ people to a set of hiking subgroups so that every person approves the size of their assigned subgroup? The problem is also known as efficiently deciding if an instance of an anonymous Hedonic Game with interval approval preferences admits a wonderful partition. We resolve the open problem in the affirmative by presenting an $O(n^5)$ time algorithm for Woeginger's Hiking Problem. Our solution is based on employing a dynamic programming approach for a specific rectangle stabbing problem from computational geo\-metry. Moreover, we propose natural, more demanding extensions of the problem, e.g., maximizing the number of satisfied participants and variants with single-peaked preferences, and show that they are also efficiently solvable. Last but not least, we employ our solution to efficiently compute a partition that maximizes the egalitarian welfare for anonymous single-peaked Hedonic Games.},
   selected=true,
