Add slides for Giannis' talk

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,6 +118,7 @@ Such ballots are unravelled into a profile of direct votes by selecting one entr
 For the classic model of delegating to individual agents, we give asymptotically near-tight algorithms for carrying out the two procedures and efficient algorithms for finding optimal unravellings with the highest vote count for a given alternative. These algorithms inspire novel tie-breaking rules for the setup of voting to change a status quo.
 We then introduce a new axiom, which can be viewed as a variant of the participation axiom, and use algorithmic techniques developed earlier in the paper to show that it is satisfied by MinSum and a lexicographic refinement of MinMax (but not MinMax itself).},
   video={https://underline.io/lecture/93372-unravelling-expressive-delegations-complexity-and-normative-analysis},
+  slides={expressive_delegations_slides.pdf},
   bibtex_show={true},
 }
 
