Adding venues and migrating bib entry.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,17 +24,6 @@ When there are as many agents on each side with fully-ordered preference lists, 
     bibtex_show={true},
 }
 
-@misc{Constantinescu2024Validity,
-    title={Validity in Network-Agnostic Byzantine Agreement}, 
-    author={Constantinescu, Andrei and Dufay, Marc and Ghinea, Diana and Wattenhofer, Roger},
-    year={2024},
-    arxiv={2410.19721},
-    abbr={arXiv},
-    bibtex_show={true},
-    abstract={In Byzantine Agreement (BA), there is a set of \(n\) parties, from which up to \(t\) can act byzantine. All honest parties must eventually decide on a common value (agreement), which must belong to a set determined by the inputs (validity). Depending on the use case, this set can grow or shrink, leading to various possible desiderata collectively known as validity conditions. Varying the validity property requirement can affect the regime under which BA is solvable. We study how the selected validity property impacts BA solvability in the network-agnostic model, where the network can either be synchronous with up to \(t_s\) byzantine parties or asynchronous with up to \(t_a \leq t_s\) byzantine parties.
-We show that for any non-trivial validity property the condition \(2 \cdot t_s + t_a < n\) is necessary for BA to be solvable, even with cryptographic setup. Noteworthy, specializing this claim to \(t_a=0\) gives that \(t_s < n/2\) is required when one expects a purely synchronous protocol to also work in asynchrony when there are no corruptions. This is especially surprising given that for some validity properties \(t_s < n\) is known to be achievable without the last stipulation. Thereafter, we give necessary and sufficient conditions for a validity property to render BA solvable, both for the case with cryptographic setup and for the one without. This traces the precise boundary of solvability in the network-agnostic model for every validity property. Our proof of sufficiency provides a universal protocol, that achieves BA for a given validity property whenever the provided conditions are satisfied.},
-}
-
 @misc{Constantinescu2024RoadPricing,
     author={Constantinescu, Andrei and Turko, Andrzej and Wattenhofer, Roger},
     title={Logarithmic Approximation for Road Pricing on Grids},
@@ -46,6 +35,31 @@ We show that for any non-trivial validity property the condition \(2 \cdot t_s +
 %%%%%%%%%%%%%%%%%%%%
 % Conference Papers.
 %%%%%%%%%%%%%%%%%%%%
+@InProceedings{Constantinescu2025Validity,
+  author =	{Constantinescu, Andrei and Dufay, Marc and Ghinea, Diana and Wattenhofer, Roger},
+  title =	{{Validity in Network-Agnostic Byzantine Agreement}},
+  booktitle =	{39th International Symposium on Distributed Computing (DISC 2025)},
+  pages =	{24:1--24:23},
+  series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
+  ISBN =	{978-3-95977-402-4},
+  ISSN =	{1868-8969},
+  year =	{2025},
+  arxiv = {2410.19721},
+  abbr={DISC 25},
+  bibtex_show={true},  
+  volume =	{356},
+  editor =	{Kowalski, Dariusz R.},
+  publisher =	{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.DISC.2025.24},
+  URN =		{urn:nbn:de:0030-drops-248413},
+  doi =		{10.4230/LIPIcs.DISC.2025.24},
+  annote =	{Keywords: byzantine agreement, validity, network-agnostic protocols},
+  abstract={Byzantine Agreement (BA) considers a setting of \(n\) parties, out of which up to \(t\) can exhibit byzantine (malicious) behavior. Honest parties must decide on a common value (agreement), which must belong to a set determined by the honest inputs (validity). Depending on the use case, this set can grow or shrink, leading to various possible desiderata collectively known as validity conditions. Varying the validity property requirement can affect the regime under which BA is solvable.
+Our work investigates how the selected validity property impacts BA solvability in the network-agnostic model, where the network can either be synchronous with up to \(t_s\) byzantine parties or asynchronous with up to \(t_a \le t_s\) byzantine parties. We give necessary and sufficient conditions for a validity property to render BA solvable, both for the case with cryptographic setup and for the one without. This traces the precise boundary of solvability in the network-agnostic model for every validity property. Our proof of sufficiency provides a universal protocol, that achieves BA for a given validity property whenever the provided conditions are satisfied.
+We note that, for any non-trivial validity property, the condition \(2 \cdot t_s + t_a < n\) is necessary for BA to be solvable, even with cryptographic setup. Specializing this claim to \(t_a = 0\) gives that \(t < n/2\) is required whenever one expects a purely synchronous protocol to also work in an asynchronous network when there are no corruptions. This is especially surprising given that, for some validity properties, \(t < n\) is a sufficient condition without the last stipulation.},
+}
+
 @InProceedings{Constantinescu2024ByzantineBoxes,
     author={Constantinescu, Andrei and Wattenhofer, Roger},
     title={Byzantine Game Theory: Sun Tzu's Boxes},
